--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> 
 
   <title>Frontend Mentor | Huddle landing page with split benefits section</title>
 
@@ -30,46 +32,52 @@
       <img src="images/logo.svg" alt="Huddle Logo">
     </div>
 
-    <div id="try-it-button">
-        <button>Try it free</button>
+    <div class="submit-button">
+      <form>
+        <input type="submit" id="try-it-button" value="Try It Free"> 
+      </form>
     </div>
 
   </header>
 
+  <main>
 
+    <div id="info_1">
+      <h1>Build The Community Your Fans Will Love</h1>
+      <p>Huddle re-imagines the way we build communities. 
+      You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+    </div>
 
-  Build The Community Your Fans Will Love
+    <div id="screen-mockups">
+      <img src="images/screen-mockups.svg" alt="Screen Mockups">
+    </div>
 
-  Huddle re-imagines the way we build communities. 
-  You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
+    <h2>Grow Together</h2>
+    <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
 
-  Get Started For Free
+    <h2>Flowing Conversations</h2>
+    <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
 
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
+    <h2>Your Users</h2>
+    <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
 
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
+    Ready To Build Your Community?
+    Get Started For Free
 
-  Your Users
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi hendrerit tincidunt risus eget vestibulum. Integer vel ligula dictum.
 
-  Ready To Build Your Community?
-  Get Started For Free
+    About Us
+    What We Do
+    FAQ
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi hendrerit tincidunt risus eget vestibulum. Integer vel ligula dictum.
+    Career
+    Blog
+    Contact Us
 
-  About Us
-  What We Do
-  FAQ
+    Subscribe
 
-  Career
-  Blog
-  Contact Us
-
-  Subscribe
-
-  &copy; 2018 Huddle Copyright
+    &copy; 2018 Huddle Copyright
+  </main>
 
   <footer>
     <p class="attribution">
