--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
     <div class="submit-button">
       <form>
-        <input type="submit" id="try-it-button" value="Try It Free"> 
+        <input type="button" id="try-it-button" value="Try It Free"> 
+        <!-- <input type="submit" id="try-it-button" value="Try It Free">  -->
       </form>
     </div>
 
@@ -52,17 +53,27 @@
       <img src="images/screen-mockups.svg" alt="Screen Mockups">
     </div>
 
-    <h2>Grow Together</h2>
-    <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+    <div id="your-users">
+      <img src="images/illustration-your-users.svg" alt="Illustration of Your Users">
+    </div>
 
-    <h2>Flowing Conversations</h2>
-    <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+    <div id="info_2">
+      <h2>Grow Together</h2>
+      <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
 
-    <h2>Your Users</h2>
-    <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+      <h2>Flowing Conversations</h2>
+      <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
 
-    Ready To Build Your Community?
-    Get Started For Free
+      <h2>Your Users</h2>
+      <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+    </div>
+
+    <div id="info_3">
+      <h2>Ready To Build Your Community?</h2>
+      <form>
+        <input type="button" id="get-started-button" value="Get Started For Free">
+      </form>
+    </div>
 
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi hendrerit tincidunt risus eget vestibulum. Integer vel ligula dictum.
 
