Some formatting for #footer-1

--- a/index.html
+++ b/index.html
@@ -75,19 +75,31 @@
       </form>
     </div>
 
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi hendrerit tincidunt risus eget vestibulum. Integer vel ligula dictum.
+    <section id="footer-1">
+      <form action="">
+        Subscribe<br>
+        <input type="text" value="email@example.com">
+      </form>
 
-    About Us
-    What We Do
-    FAQ
+      <img src="images/logo-white.svg" class="footer-1-svg" alt="Huddle Logo">
 
-    Career
-    Blog
-    Contact Us
 
-    Subscribe
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi hendrerit tincidunt risus eget vestibulum. Integer vel ligula dictum.</p>
 
-    &copy; 2018 Huddle Copyright
+      <p>
+        <a href="">About Us</a><br>
+        <a href="">What We Do</a><br>
+        <a href="">FAQ</a>
+      </p>
+      
+      <p>
+        <a href="">Career</a><br>
+        <a href="">Blog</a><br>
+        <a href="">Contact Us</a>
+      </p>
+
+      &copy; 2018 Huddle Copyright
+    </section>
   </main>
 
   <footer>
