Finished "footer" areas; some formatting tweaks (text color, etc.)

--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@
         <a href="">Contact Us</a>
       </p>
 
-      &copy; 2018 Huddle Copyright
     </section>
+
+    <div id="footer-2">
+      &copy; 2018 Huddle Copyright
+    </div>
   </main>
 
   <footer>
