--- a/index.html
+++ b/index.html
@@ -49,29 +49,37 @@
       You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
     </div>
 
+    <div id="upper_get_started_button">
+      <form>
+        <input type="button" class="get-started-button" value="Get Started For Free">
+      </form>
+    </div>
+
     <div id="screen-mockups">
       <img src="images/screen-mockups.svg" alt="Screen Mockups">
     </div>
 
-    <div id="your-users">
-      <img src="images/illustration-your-users.svg" alt="Illustration of Your Users">
-    </div>
+    <section id="info_2_flex">
+      <div id="your-users">
+        <img src="images/illustration-your-users.svg" alt="Illustration of Your Users">
+      </div>
 
-    <div id="info_2">
-      <h2>Grow Together</h2>
-      <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+      <div id="info_2">
+        <h2>Grow Together</h2>
+        <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
 
-      <h2>Flowing Conversations</h2>
-      <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+        <h2>Flowing Conversations</h2>
+        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
 
-      <h2>Your Users</h2>
-      <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
-    </div>
+        <h2>Your Users</h2>
+        <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+      </div>
+    </section>
 
     <div id="info_3">
       <h2>Ready To Build Your Community?</h2>
       <form>
-        <input type="button" id="get-started-button" value="Get Started For Free">
+        <input type="button" class="get-started-button" value="Get Started For Free">
       </form>
     </div>
 
